# AnkiPronHs

./: .gitignore  .stylish-haskell.yaml  CLAUDE.md  Main.hs  Makefile  README.md  TODO.txt  anki.cabal  anki.hs  finalize.sh  fourmolu.yaml  prepare.sh  pron_not_available.txt  stack.yaml  words_not_found.txt  words_without_pron_in_dict
lib/: AnkiDB.hs  DWDS.hs  Download.hs  Duden.hs  GenExamples.hs  Mplayer.hs  Types.hs
lib/Search/: DWDS.hs  Duden.hs  Exception.hs  VocabularyCom.hs
src/: anki.hs
test/: Spec.hs
