cabal-version: >=1.10
name:          anki
version:       0.1.0.0
license:       BSD3
license-file:  LICENSE
copyright:     2020 Jan Hrček
maintainer:    example@example.com
author:        Jan Hrček
homepage:      https://github.com/jhrcek/AnkiPron
synopsis:
    Tool to download pronunciation MP3s and upload them to anki decks

description:   Please see README.md
category:      Web
build-type:    Simple

library
    exposed-modules:
        AnkiDB
        Download
        Search.Duden
        Search.DWDS
        Types

    hs-source-dirs:   lib
    default-language: Haskell2010
    ghc-options:      -O2 -Wall
    build-depends:
        base,
        bytestring,
        containers,
        directory,
        filepath,
        http-client,
        lens,
        process,
        sqlite-simple,
        regex-compat-tdfa,
        regex-tdfa,
        split,
        tagsoup,
        text,
        text-icu,
        wreq

executable anki-exe
    main-is:          Main.hs
    hs-source-dirs:   .
    default-language: Haskell2010
    ghc-options:      -O2 -Wall
    build-depends:
        anki,
        base,
        containers,
        text

test-suite anki-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:
        anki,
        base,
        hspec
