cabal-version: 3.0
name:          anki
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
copyright:     2020 Jan Hrček
maintainer:    honza.hrk@gmail.com
author:        Jan Hrček
homepage:      https://github.com/jhrcek/AnkiPron
synopsis:
  Tool to download pronunciation MP3s and upload them to anki decks

description:   Please see README.md
category:      Web
build-type:    Simple

source-repository head
  type:     git
  location: git@github.com/jhrcek/AnkiPronHs.git

common common-options
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths
    -Wpartial-fields -Wno-unrecognised-pragmas -Wunused-packages
    -Winvalid-haddock -Woperator-whitespace -Wredundant-bang-patterns

  default-language: GHC2021

library
  import:          common-options
  exposed-modules:
    AnkiDB
    Download
    Search.Duden
    Search.DWDS
    Search.Exception
    Search.VocabularyCom
    Types

  hs-source-dirs:  lib
  build-depends:
    , base           >=4.13 && <5
    , containers
    , directory
    , filepath
    , http-client
    , lens
    , pcre-heavy
    , process
    , split
    , sqlite-simple
    , tagsoup
    , text
    , wreq

executable anki-exe
  import:         common-options
  main-is:        Main.hs
  hs-source-dirs: .
  ghc-options:    -O2
  build-depends:
    , anki
    , base
    , containers
    , text

test-suite anki-test
  import:         common-options
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  hs-source-dirs: test
  build-depends:
    , anki
    , base
    , hspec
